# WikidataPaperFinder

./: README.md  app.py  pyproject.toml  wpf.py
templates/: 500.html  css.html  footer.html  index.html  results.html
tests/: conftest.py  test_app.py  test_wpf.py
